@@ -1,11 +1,14 @@
 package org.jboss.pnc.buildagent.server.httpinvoker;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.jboss.pnc.api.dto.HeartbeatConfig;
+import org.jboss.pnc.api.dto.Request;
 import org.jboss.pnc.buildagent.api.Status;
 import org.jboss.pnc.buildagent.api.TaskStatusUpdateEvent;
 import org.jboss.pnc.buildagent.client.BuildAgentClient;
 import org.jboss.pnc.buildagent.client.BuildAgentClientException;
 import org.jboss.pnc.buildagent.client.BuildAgentHttpClient;
+import org.jboss.pnc.buildagent.client.HttpClientConfiguration;
 import org.jboss.pnc.buildagent.server.TermdServer;
 import org.junit.AfterClass;
 import org.junit.Assert;
@@ -16,7 +19,10 @@ import org.slf4j.LoggerFactory;
 
 import javax.servlet.ServletException;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
@@ -24,6 +30,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 
 /**
@@ -33,6 +40,7 @@ public class TestCommandExecution {
     private static final Logger log = LoggerFactory.getLogger(TestCommandExecution.class);
 
     private static Set<Consumer<String>> responseConsumers = new HashSet<>();
+    private static AtomicInteger heartbeatCounter = new AtomicInteger();
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
@@ -52,8 +60,10 @@ public class TestCommandExecution {
         callbackServer = new HttpServer();
 
         Consumer<String> responseConsumer = (s) -> responseConsumers.forEach(rc -> rc.accept(s));
-        ResponseConsumerAddindServletFactory servletFactory = new ResponseConsumerAddindServletFactory(responseConsumer);
-        callbackServer.addServlet(CallbackHandler.class, Optional.of(servletFactory));
+        ResponseConsumerAddindServletFactory callbackHandlerFactory = new ResponseConsumerAddindServletFactory(responseConsumer);
+        HeartbeatServletFactory heartbeatServletFactory = new HeartbeatServletFactory(heartbeatCounter);
+        callbackServer.addServlet(CallbackHandler.class, Optional.of(callbackHandlerFactory));
+        callbackServer.addServlet(HeartbeatHandler.class, Optional.of(heartbeatServletFactory));
 
         callbackServer.start(LOCAL_PORT, HOST);
     }
@@ -67,14 +77,24 @@ public class TestCommandExecution {
     @Test
     public void shouldExecuteRemoteCommand()
             throws IOException, BuildAgentClientException, InterruptedException, ExecutionException, TimeoutException,
-            ServletException {
+            URISyntaxException {
         CompletableFuture<String> callbackFuture = new CompletableFuture<>();
         Consumer<String> onResult = (s) -> callbackFuture.complete(s);
         responseConsumers.add(onResult);
 
-        URL callbackUrl = new URL("http://" + HOST +":" + LOCAL_PORT+"/" + CallbackHandler.class.getSimpleName());
-        BuildAgentClient client = new BuildAgentHttpClient(terminalBaseUrl, callbackUrl, "PUT");
-        client.execute(TEST_COMMAND_BASE + "10 0");
+        URI callbackUrl = new URI("http://" + HOST +":" + LOCAL_PORT+"/" + CallbackHandler.class.getSimpleName());
+        HeartbeatConfig heartbeatConfig = new HeartbeatConfig(
+                new Request(Request.Method.GET, new URI("http://" + HOST +":" + LOCAL_PORT+"/" + HeartbeatHandler.class.getSimpleName())),
+                50L,
+                TimeUnit.MILLISECONDS);
+        HttpClientConfiguration clientConfiguration = HttpClientConfiguration.newBuilder()
+                .callback(new Request(Request.Method.PUT, callbackUrl, Collections.emptySet(), null))
+                .termBaseUrl(terminalBaseUrl)
+                .heartbeatConfig(Optional.of(heartbeatConfig))
+                .build();
+        BuildAgentClient client = new BuildAgentHttpClient(clientConfiguration);
+
+        client.execute(TEST_COMMAND_BASE + "10 100");
 
         Assert.assertNotNull(client.getSessionId());
 
@@ -83,6 +103,8 @@ public class TestCommandExecution {
 
         TaskStatusUpdateEvent callbackRequest = objectMapper.readValue(callback, TaskStatusUpdateEvent.class);
         Assert.assertEquals(Status.COMPLETED, callbackRequest.getNewStatus());
+
+        Assert.assertTrue("Did not receive all heartbeats.", heartbeatCounter.get() > 20);
     }
 
     @Test
@@ -105,7 +127,7 @@ public class TestCommandExecution {
         String callback = callbackFuture.get(3, TimeUnit.SECONDS);
         responseConsumers.remove(onResult);
         TaskStatusUpdateEvent callbackRequest = objectMapper.readValue(callback, TaskStatusUpdateEvent.class);
-        Assert.assertEquals(Status.FAILED, callbackRequest.getNewStatus());
+        Assert.assertEquals(Status.INTERRUPTED, callbackRequest.getNewStatus());
 
     }
 }
